sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:9: error: Boolean does not take parameters
        echange(i+1,i)
               ^AlgCocktailSort1:14: error: Boolean does not take parameters
        echange(len-2-i, len-1-i)
               ^