sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var echange = true
  var len = getNombreValeurs()
  while (echange == true) {
    echange = false
    for (i <-0 to len -2) {
      if (plusPetitQue(i+1,i)) {
        echange(i+1,i)
        echange = true
      }
    };for (i <-0 to len -2) {
      if (plusPetitQue(len -2-i,len -1-i)) {
        echange(len-2-i, len-1-i)
        echange = true
      }
    } 
  }

}